# soajs.python

./: .gitignore  .travis.yml  CI-SETUP.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP.md  pyproject.toml  quickstart.sh  requirements-dev.txt
.github/workflows/: test.yml
examples/: fastapi_example.py  flask_example.py
soajs/: __init__.py  config.py  exceptions.py  middleware.py  models.py  registry.py  registry_client.py
tests/: __init__.py  test_config.py  test_registry.py
